# FocusEarthlight

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README1.md  bootstrap_focus_earthlight.sh  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
data/fixtures/: audit-record.sample.json  event-object.sample.json  hypothesis-card.sample.json  site-pack.sample.json  source-record.sample.json  world-state.sample.json
docs/: 000-logheads.md  constitution.md
docs/FOCUS Earthlight/: FOCUS_Earthlight_Concept_Brief.docx  FOCUS_Earthlight_Design_Spec.docx
observatory/analysis/: hypothesis_engine.py
observatory/models/: __init__.py  audit_record.py  event.py  hypothesis_card.py  source_record.py
observatory/tests/: test_audit_hypothesis_linkage.py  test_auditrecord_ingest_path.py  test_event_source_linkage.py  test_eventobject_ingest_path.py  test_hypothesis_card_model.py  test_hypothesis_stub.py  test_hypothesiscard_ingest_path.py  test_model_exports.py  test_models_fixture_loading.py  test_sourcerecord_ingest_path.py
schemas/: audit-record.schema.json  event-object.schema.json  hypothesis-card.schema.json  site-pack.schema.json  source-record.schema.json  world-state.schema.json
sim/engine/: tick.py
sim/models/: __init__.py  site_pack.py  world_state.py
sim/tests/: test_site_pack_constitutional_separation.py  test_site_pack_model.py  test_site_pack_roundtrip.py  test_tick.py  (+3 more)
tools/: run_tick.py  seed_world.py  validate_schemas.py
ui/web/: server.js  (+2 more)
