[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-earthlight"
version = "0.1.0"
description = "FOCUS: Earthlight simulation and observatory platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "black>=24.8",
]

[tool.setuptools]
packages = ["sim", "sim.engine", "sim.models", "observatory", "observatory.ingest", "observatory.analysis", "observatory.models", "worker", "worker.jobs"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["sim/tests", "observatory/tests"]
